clean up tokens
